# TG-Cpp

./: CMakeLists.txt  README.md
examples/: ExampleInput.ini
src/: TGModel.cpp  TGlib.cpp  TGlib.h
